--- a/FRNT-JS10/Lection_2/HomeWork/index.html
+++ b/FRNT-JS10/Lection_2/HomeWork/index.html
@@ -34,8 +34,8 @@
       <section class="map">
         <h2>Задание 3 - Перетаскивание элемента</h2>
         <div class="map__pins">
-          <button class="map__pin map__pin--main" style="left: 50%; top: 42%">
-            <img src="img/pin.svg" width="40" height="44" draggable="false" alt="Метка объявления">
+          <button class="map__pin map__pin--main">
+            <img src="img/pin.svg" width="40" height="44" draggable="false" alt="Метка карты">
           </button>
         </div>
       </section>
