Выполнено домашнее задание к лекции 3.

--- a/FRNT-JS10/Lection_3/HomeWork/avalon-transformers-arena-master/index.html
+++ b/FRNT-JS10/Lection_3/HomeWork/avalon-transformers-arena-master/index.html
@@ -41,6 +41,11 @@
   </p>
 </template>
 
+<div class="winner-description">
+  <p class="winner-description__text"></p>
+</div>
+
+
 <script src="index.js"></script>
 </body>
 </html>
