Изменено задание к лекции 5 по курсу FRNT-JS10.

--- a/FRNT-JS10/Lection_5/index.html
+++ b/FRNT-JS10/Lection_5/index.html
@@ -13,16 +13,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
-      <h1>SWAPI</h1>
-      <div class="cards"></div>
+    <h1>SWAPI</h1>
+    <main>
+      <div class="container">
+        <div class="cards"></div>
         <div class="paginator">
-          <nav aria-label="Page navigation example" class="m-right">
-            <ul class="pagination paginator-page-size"></ul>
-          </nav>
-          <div class="show_all"></div>
+          <div class="paginator">
+            <nav aria-label="Page navigation example" class="m-right">
+              <ul class="pagination paginator-page-size"></ul>
+            </nav>
+            <div class="show_all"></div>
+          </div>
         </div>
-    </div>
+      </div>
+    </main>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
